Changed width of TreeDisplay to prevent text overspill

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .pageHeading {
-    width: 100vw;
+    width: 100%;
     text-align: center;
     font-weight: 300;
     font-size: 2em;
